drm/i915: Wait for vblank between disabling planes and disabling crtc

Disabling cursor does not take effect until the next vblank, but if the
pipe is shut down too quickly after a cursor disable, we will see
random corruption from where the mouse cursor used to be when the pipe
is enabled again.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=106478
References: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/877396/
Signed-off-by: Maarten Lankhorst <maarten.lankhorst@linux.intel.com>
Cc: Sean Paul <seanpaul@google.com>
Cc: Kristian H. Kristensen <hoegsberg@chromium.org>